# TerraNova

./: .gitignore  CMakeLists.txt  Makefile  Win64.cmake  notes.txt
inc/: CameraProcessor.h  ClearColorData.h  ClearScreenProcessor.h  IGame.h  SDL_Application.h  SDL_EventHandler.h  SDL_EventManager.h  SDL_IEventHandler.h  TerraNovaEventAdapter.h  TerraNovaGame.h
inc/blurryroots/: lookup.h  superclass.h  throwif.h
inc/events/: QuitEvent.h
inc/terranova/: FileReader.h  FragmentShader.h  Game.h  IDisposable.h  IEventHandler.h  IEventManager.h  IGame.h  IResource.h  Mesh.h  MeshData.h  MeshLoader.h  MeshRenderer.h  Shader.h  ShaderProgram.h  TerraNovaEventAdapter.h  TextureData.h  TextureInformation.h  TextureLoader.h  Transform.h  VertexShader.h
inc/terranova/events/: MouseButtonEvent.h  QuitEvent.h  ShutdownRequest.h  UserEvent.h
lib/: CMakeLists.txt
lib/glm/glm/: license.md
lib/sdl2/: CMakeCache.txt
lib/tinyobjloader/: license.md
lib/yanecos/: CMakeLists.txt
lib/yanecos/inc/yanecos/: Data.h  DataProcessor.h  EntityManager.h
lib/yanecos/lib/: catch.hpp
misc/: knurpsel.h  main.lua
src/: SDL_Application.cc  TerraNovaGame.cc  main.cc
